# PolytechRayTracing

./: CMakeLists.txt  README.md
.svn/: all-wcprops  entries
.svn/text-base/: README.svn-base
ImagesSRC/: billard10.ppm
ImagesSRC/.svn/: all-wcprops  entries
SceneDescriptions/: CSGIntersection.xml  CSGUnion.xml  cone.xml  defaultScene.xml  ellipsoide.xml  hyperboloide1nappe.xml  hyperboloide2nappes.xml  paraboloidehperbolique.xml
SceneDescriptions/.svn/: all-wcprops  entries
SceneDescriptions/.svn/text-base/: CSGIntersection2.xml.svn-base  Scene1.xml.svn-base  Scene2.xml.svn-base  Scene3.xml.svn-base  cylindre.xml.svn-base  paraboloide.xml.svn-base
cmake/.svn/: all-wcprops  entries
cmake/.svn/text-base/: FindITPP.cmake.svn-base
docs/: ray_casting.xmi  raytracing02.xmi
docs/.svn/: all-wcprops  entries
docs/.svn/text-base/: class diagram02.png.svn-base  rapport.odt.svn-base  raytracing01.xmi.svn-base  raytracing03.xmi.svn-base
src/: Color.h  Cylindre.h  Draughtboard.cpp  Draughtboard.h  Image.cpp  ImageTexture.cpp  LightModel.cpp  LightSource.h  Material.h  NoiseTexture.cpp  NoiseTexture.h  Plane.cpp  RNG.h  RayTracer.cpp  Rectangle.cpp  Scene.cpp  SceneParser.cpp  ScreenV2.cpp  ScreenV2.h  Set.h  Set.hpp  Shape.h  SimpleTexture.cpp  SolidNoise.cpp  SolidNoise.h  Sphere.cpp  Sphere.h  Texture.h  UVSphere.cpp  Vector3.h
src/.svn/: all-wcprops  dir-prop-base  entries
src/.svn/text-base/: CMakeLists.txt.svn-base  Color.cpp.svn-base  Cylindre.cpp.svn-base  Image.h.svn-base  ImageTexture.h.svn-base  LightModel.h.svn-base  LightSource.cpp.svn-base  MarbleTexture.cpp.svn-base  MarbleTexture.h.svn-base  Material.cpp.svn-base  Matrix3.cpp.svn-base  Matrix3.h.svn-base  ParamSurf.cpp.svn-base  ParamSurf.h.svn-base  PhongModel.cpp.svn-base  PhongModel.h.svn-base  Plane.h.svn-base  Quadrics.cpp.svn-base  Quadrics.h.svn-base  RNG.cpp.svn-base  Ray.cpp.svn-base  Ray.h.svn-base  RayTracer.h.svn-base  Rectangle.h.svn-base  Scene.h.svn-base  SceneParser.h.svn-base  Shape.cpp.svn-base  SimpleTexture.h.svn-base  Timer.cpp.svn-base  Timer.h.svn-base  UVSphere.h.svn-base  Vector2.cpp.svn-base  Vector2.h.svn-base  Vector3.cpp.svn-base  main.cpp.svn-base
tests/.svn/: all-wcprops  entries
tests/lapack/: README  fdhfgh  test3.cpp  testlapack.cpp  testzlapack2.cpp
tests/lapack/.svn/: all-wcprops  entries
tests/lapack/.svn/text-base/: Makefile.svn-base  hope.cpp.svn-base  (+1 more)
tools/.svn/: all-wcprops  entries
tools/videoloop/: index.html
tools/videoloop/.svn/: all-wcprops  entries
wiki/: EclipseConfig.wiki  MemoryLeaks.wiki  liens.wiki
wiki/.svn/: all-wcprops  entries
wiki/.svn/text-base/: OpenTasks.wiki.svn-base  Oral.wiki.svn-base  Rapport.wiki.svn-base  methodeRankItpp.wiki.svn-base
